test_regress/t/t_module_reserved_keyword.out
%Warning-SYMRSVDWORD: t/t_module_reserved_keyword.v:7:8: Symbol matches C++ common word: 'interrupt'
                                                       : ... note: In instance 'interrupt'
    7 | module interrupt (
      |        ^~~~~~~~~
                      ... For warning description see https://verilator.org/warn/SYMRSVDWORD?v=latest
                      ... Use "/* verilator lint_off SYMRSVDWORD */" and lint_on around source to disable this message.
%Error: Exiting due to
